<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ApplicationBinaryData" Id="{01386178-596b-418d-a10f-e7c7cf0e5fb8}">
    <Declaration><![CDATA[(* Simple binary user data (8 byte aligned) *)
TYPE ST_ApplicationBinaryData :
STRUCT
	aData		: ARRAY[0..Pecom_TCP_Puffer_Size] OF BYTE; // 700 Byte
	reserved	: ARRAY[0..2] OF BYTE;(* Alignment data: 3 byte *)

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>