<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TCP_Puff" Id="{a5f104b5-fdab-4e7e-90dd-15c424de072c}">
    <Declaration><![CDATA[TYPE ST_TCP_Puff:
STRUCT
	Conected	: BOOL;
	Ip_Adresss	: T_IPv4addr;
	PecomTNR  	: INT;		 
	R_Buf		: NETWORK_BUFFER;
	S_Buf		: NETWORK_BUFFER;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>